-The system has been switched to Quic (a data transfer protocol adapted for the internet) -Restrictions have been removed, allowing you to play with an unlimited number of players even when voice chat is disabled -Systems have been optimized -Support for generating a static code has been added (you can enable this in the settings under the LAN menu) -Support for switching to the turn server if P2P fails has been added